src/objects/Therapy_Hour__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual Treatment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <formula>Approver__r.FirstName + &apos; &apos; + Approver__r.LastName</formula>
        <label>Approver Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Note__c</fullName>
        <label>Approver Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Therapy_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Narrative_Note__c</fullName>
        <label>Narrative Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Therapy_Hours</relationshipLabel>
        <relationshipName>Therapy_Hours</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pbsFirstName__c</fullName>
        <formula>Service_Assignment__r.pbsFirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pbsFirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pbsLastName__c</fullName>
        <formula>Service_Assignment__r.pbsLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pbsLastName</label>
        <type>Text</type>
    </fields>
    <label>Therapy_Hour</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Therapy_Hours</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Start_Time_Must_Be_Before_End_Time</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Time__c &gt;= End_Time__c</errorConditionFormula>
        <errorMessage>Start time must be before End time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Time__c &gt; now()</errorConditionFormula>
        <errorMessage>Start time can&apos;t be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Therapy_span_duration</fullName>
        <active>true</active>
        <errorConditionFormula>AND((End_Time__c - Start_Time__c)*24*60 &gt; 480, NOT($User.Alias=&apos;inte&apos;))</errorConditionFormula>
        <errorMessage>The total duration cannot be more than 8 Hrs. Please correct start and/or end time for accuracy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Theray_should_be_atleast_15Min</fullName>
        <active>true</active>
        <errorConditionFormula>AND((End_Time__c - Start_Time__c)*24*60 &lt; 15 , NOT( $User.Alias =&apos;inte&apos;))</errorConditionFormula>
        <errorMessage>The total duration cannot be less than 15 mins. Please correct start and/or end time for accuracy.</errorMessage>
    </validationRules>
</CustomObject>